feat: ignore yarn.lock file in the CI

--- a/.nxignore
+++ b/.nxignore
@@ -3,3 +3,6 @@ artifacts/
 cache/
 secret/
 .proof*
+
+# We don't want the CI to run over all the packages, we decided to ignore it for now
+yarn.lock
