--- a/packages/giveaway/package.json
+++ b/packages/giveaway/package.json
@@ -3,7 +3,6 @@
     "version": "0.0.1",
     "description": "Contracts used to airdrop tokens",
     "license": "MIT",
-
     "main": "index.js",
     "directories": {
         "contracts": "contracts"
@@ -43,8 +42,11 @@
         "@nomiclabs/hardhat-ethers": "^2.2.3",
         "@nomiclabs/hardhat-etherscan": "^3.1.7",
         "@openzeppelin/contracts-upgradeable": "^4.9.0",
-        "@typechain/ethers-v5": "^11.0.0",
-        "@typechain/hardhat": "^7.0.0",
+        "@typechain/ethers-v5": "^10.1.0",
+        "@typechain/hardhat": "^6.1.2",
+        "@types/chai": "^4.3.5",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^20.2.5",
         "@typescript-eslint/eslint-plugin": "^5.59.8",
         "@typescript-eslint/parser": "^5.59.8",
         "chai": "^4.3.7",
@@ -59,13 +61,13 @@
         "ethers": "^5.0.0",
         "hardhat": "^2.14.1",
         "hardhat-gas-reporter": "^1.0.9",
-        "prettier": "2.0.5",
-        "prettier-plugin-solidity": "1.0.0-beta.11",
+        "prettier": "^2.8.8",
+        "prettier-plugin-solidity": "^1.1.3",
         "solhint": "^3.4.1",
         "solhint-plugin-prettier": "^0.0.5",
         "solidity-coverage": "^0.8.2",
         "ts-node": "^10.9.1",
         "typechain": "^8.2.0",
-        "typescript": "^5.0.4"
+        "typescript": "5.0.4"
     }
 }
