--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ coverage*
 node_modules/
 .idea/
 .DS_Store
+
+# yarn 3
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
