--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
     "@ethereumjs/block": "^3.5.1",
     "@ethereumjs/common": "^2.5.0",
     "@ethereumjs/tx": "^3.3.2",
+    "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "^5.0.5",
     "@maticnetwork/fx-portal": "^1.0.5",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
