--- a/packages/asset/package.json
+++ b/packages/asset/package.json
@@ -25,8 +25,9 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.1.2",
     "chai": "^4.3.7",
+    "dotenv": "^16.1.4",
     "ethers": "^5.7.2",
-    "hardhat": "^2.13.0",
+    "hardhat": "^2.14.1",
     "hardhat-deploy": "^0.11.25",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.8",
