--- a/packages/giveaway/package.json
+++ b/packages/giveaway/package.json
@@ -4,9 +4,9 @@
     "description": "Contracts used for token claims",
     "license": "MIT",
     "main": "index.js",
-    "directories": {
-        "contracts": "contracts"
-    },
+    "files": [
+        "contracts"
+    ],
     "scripts": {
         "lint": "eslint --max-warnings 0 \"**/*.{js,ts}\" && solhint --max-warnings 0 \"contracts/**/*.sol\"",
         "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix \"contracts/**/*.sol\"",
