--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -124,5 +124,8 @@
   "bugs": {
     "url": "https://github.com/thesandboxgame/sandbox-smart-contracts/issues"
   },
-  "homepage": "https://github.com/thesandboxgame/sandbox-smart-contracts#readme"
+  "homepage": "https://github.com/thesandboxgame/sandbox-smart-contracts#readme",
+  "dependencies": {
+    "defender-relay-client": "^1.44.0"
+  }
 }
