--- a/packages/giveaway/package.json
+++ b/packages/giveaway/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@sandbox-smart-contracts/giveaway",
     "version": "0.0.1",
-    "description": "Contracts used to airdrop tokens",
+    "description": "Contracts used for token claims",
     "license": "MIT",
     "main": "index.js",
     "directories": {
@@ -12,8 +12,8 @@
         "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix \"contracts/**/*.sol\"",
         "format": "prettier --check \"**/*.{ts,js,sol}\"",
         "format:fix": "prettier --write \"**/*.{ts,js,sol}\"",
-        "test": "dotenv -- cross-env NODE_OPTIONS=\"--max-old-space-size=8192 node --unhandled-rejections=strict\" HARDHAT_COMPILE=true NODE_ENV=test hardhat test",
-        "coverage": "dotenv -- cross-env NODE_OPTIONS=\"--max-old-space-size=8192 node --unhandled-rejections=strict\" HARDHAT_COMPILE=true NODE_ENV=test hardhat coverage --testfiles 'test/*.ts''test/*.js'",
+        "test": "hardhat test",
+        "coverage": "hardhat coverage --testfiles 'test/*.ts''test/*.js'",
         "hardhat": "hardhat",
         "compile": "hardhat compile"
     },
@@ -50,9 +50,7 @@
         "@typescript-eslint/eslint-plugin": "^5.59.8",
         "@typescript-eslint/parser": "^5.59.8",
         "chai": "^4.3.7",
-        "cross-env": "^7.0.3",
         "dotenv": "^16.1.3",
-        "dotenv-cli": "^7.2.1",
         "eslint": "^8.41.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-mocha": "^10.1.0",
