--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,7 @@
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "csv-parser": "^3.0.0",
+    "defender-relay-client": "^1.44.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.7.0",
@@ -75,8 +76,7 @@
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.9.1",
-    "typescript": "^4.0.5",
-    "defender-relay-client": "^1.44.0"
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "postinstall": "node ./.setup.js",
