--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "description": "The Sandbox smart contracts",
     "scripts": {
         "test": "nx run-many --target=test",
-        "coverage": "nx run-many --target=coverage && istanbul-combine -r lcov -r html packages/*/coverage.json",
+        "coverage": "nx run-many --target=coverage && istanbul-combine -r lcov -r html 'packages/*/coverage.json'",
         "lint": "nx run-many --target=lint",
         "format": "nx run-many --target=format",
         "deploy": "nx run-many --target=deploy",
         "all": "nx run-many --all --parallel --targets=lint,format,test,deploy && nx run-many --all --targets=coverage",
         "test:ci": "nx affected --target=test",
-        "coverage:ci": "nx affected --target=coverage && istanbul-combine -r lcov -r html packages/*/coverage.json",
+        "coverage:ci": "nx affected --target=coverage && istanbul-combine -r lcov -r html 'packages/*/coverage.json'",
         "lint:ci": "nx affected --target=lint",
         "format:ci": "nx affected --target=format",
         "deploy:ci": "nx affected --target=deploy",
