feat: added royalty registry dependency

--- a/packages/asset/package.json
+++ b/packages/asset/package.json
@@ -36,5 +36,9 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@manifoldxyz/libraries-solidity": "^1.0.4",
+    "@manifoldxyz/royalty-registry-solidity": "^2.0.3"
   }
 }
