--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -54,8 +54,9 @@
         "cross-env": "^7.0.3",
         "dotenv": "^16.1.4",
         "dotenv-cli": "^7.2.1",
-        "eslint": "^8.42.0",
+        "eslint": "^8.43.0",
         "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-json": "^3.1.0",
         "eslint-plugin-mocha": "^10.1.0",
         "eslint-plugin-prettier": "^4.2.1",
         "ethers": "5",
