fix: rm forking and remove testnets from package config

--- a/packages/example_hardhat/.env.example
+++ b/packages/example_hardhat/.env.example
@@ -7,8 +7,11 @@ MNEMONIC_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
 # goerli provider URI
 ETH_NODE_URI_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
 
-# goerli provider URI
+# mumbai provider URI
 ETH_NODE_URI_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
+
+# alternative local URI if desired
+ETH_NODE_URI_LOCAL=xxxxxxxxxxxxxxxxxxxxxx
 
 # Options to increase Node process memory (useful when running yarn coverage for example on some machine)
 NODE_OPTIONS=--max-old-space-size=8192
