--- a/packages/example_hardhat/tsconfig.json
+++ b/packages/example_hardhat/tsconfig.json
@@ -7,5 +7,11 @@
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true
-  }
+  },
+  "include": [
+    "hardhat.config.ts",
+    "./typechain-types",
+    "./scripts",
+    "./test"
+  ]
 }
