--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -61,7 +61,7 @@
         "eslint-plugin-mocha": "^10.1.0",
         "eslint-plugin-prettier": "^4.2.1",
         "ethers": "5",
-        "hardhat": "^2.16.0",
+        "hardhat": "2.15.0",
         "hardhat-deploy": "^0.11.30",
         "prettier": "^2.8.8",
         "ts-node": "^10.9.1",
