--- a/packages/operator-filter/package.json
+++ b/packages/operator-filter/package.json
@@ -30,8 +30,8 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/contracts-upgradeable": "^4.9.2",
+    "@openzeppelin/contracts": "^4.8.2",
+    "@openzeppelin/contracts-upgradeable": "^4.9.0",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/mocha": "^10.0.1",
@@ -46,6 +46,7 @@
     "ethers": "^6.6.2",
     "hardhat": "^2.14.1",
     "hardhat-gas-reporter": "^1.0.9",
+    "operator-filter-registry": "^1.4.2",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
