--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -16,7 +16,8 @@
     "private": true,
     "dependencies": {
         "@sandbox-smart-contracts/asset": "*",
-        "@sandbox-smart-contracts/giveaway": "*"
+        "@sandbox-smart-contracts/giveaway": "*",
+        "@sandbox-smart-contracts/royalties": "*"
     },
     "files": [
         "deployments"
