--- a/packages/operator-filter/package.json
+++ b/packages/operator-filter/package.json
@@ -47,6 +47,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "operator-filter-registry": "^1.4.2",
     "ethers": "^5.7.2",
     "hardhat": "^2.14.1",
     "hardhat-gas-reporter": "^1.0.9",
