--- a/packages/deploy/.env.example
+++ b/packages/deploy/.env.example
@@ -1,12 +1,9 @@
-# seed-phrase for the wallet to use on default network and rinkeby_test (personal test network)
+# seed-phrase for the wallet to use on default network
 # this is required for local testing otherwise hardhat will throw "Invalid mnemonic"
 MNEMONIC=xxxxxxxxxxxxxxxxxxxxxx
 
 # seed-phrase for the wallet to use on mainnet
 MNEMONIC_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
-
-# seed-phrase for the wallet to use on rinkeby
-MNEMONIC_RINKEBY=xxxxxxxxxxxxxxxxxxxxxx
 
 # seed-phrase for the wallet to use on goerli
 MNEMONIC_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
@@ -16,9 +13,6 @@ MNEMONIC_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
 
 # mainnet provider URI
 ETH_NODE_URI_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
-
-# rinkeby provider URI
-ETH_NODE_URI_RINKEBY=xxxxxxxxxxxxxxxxxxxxxx
 
 # goerli provider URI
 ETH_NODE_URI_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
@@ -34,7 +28,6 @@ ETH_NODE_URI_POLYGON=xxxxxxxxxxxxxxxxxxxxxx
 
 # API key for etherscan verification
 ETHERSCAN_API_KEY_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
-ETHERSCAN_API_KEY_RINKEBY=xxxxxxxxxxxxxxxxxxxxxx
 ETHERSCAN_API_KEY_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
 ETHERSCAN_API_KEY_POLYGON=xxxxxxxxxxxxxxxxxxxxxx
 ETHERSCAN_API_KEY_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
