--- a/packages/asset/package.json
+++ b/packages/asset/package.json
@@ -25,6 +25,7 @@
     "@openzeppelin/contracts": "^4.9.0",
     "@openzeppelin/contracts-upgradeable": "^4.9.0",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
+    "@sandbox-smart-contracts/dependency-metatx": "*",
     "@sandbox-smart-contracts/dependency-operator-filter": "*",
     "@sandbox-smart-contracts/dependency-royalty-management": "*",
     "@typechain/ethers-v5": "^10.2.1",
