fix: update solhint

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "ethereum",
         "polygon",
         "smart-contracts",
-        "The Sandbox"
+        "The Sandbox",
+        "matic"
     ]
 }
