chore: use a new github action for coverage report

--- a/.github/setup/action.yml
+++ b/.github/setup/action.yml
@@ -13,7 +13,7 @@ runs:
         cache: 'yarn'
 
     - name: Installing dependencies
-      run: yarn install --frozen-lockfile
+      run: yarn install --immutable
       shell: bash
 
     - name: Derive appropriate SHAs for base and head for `nx affected` commands
