--- a/packages/example-hardhat/package.json
+++ b/packages/example-hardhat/package.json
@@ -54,5 +54,11 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
     "typescript": "5.0.4"
-  }
+  },
+  "keywords": [
+    "ethereum",
+    "polygon",
+    "smart-contracts",
+    "The Sandbox"
+  ]
 }
