--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -72,7 +72,7 @@
     "prettier": "2.0.5",
     "prettier-plugin-solidity": "1.0.0-beta.11",
     "readline": "^1.3.0",
-    "solhint": "^3.3.4",
+    "solhint": "3.4.1",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "0.8.2",
     "ts-node": "^10.9.1",
