--- a/packages/giveaway/package.json
+++ b/packages/giveaway/package.json
@@ -15,7 +15,8 @@
         "test": "hardhat test",
         "coverage": "hardhat coverage --testfiles 'test/*.ts''test/*.js'",
         "hardhat": "hardhat",
-        "compile": "hardhat compile"
+        "compile": "hardhat compile",
+        "release": "release-it"
     },
     "repository": {
         "type": "git",
@@ -32,6 +33,20 @@
             "test/**/*.ts"
         ]
     },
+    "release-it": {
+        "git": {
+            "commitMessage": "chore: @sandbox-smart-contracts/giveaway release v${version}",
+            "tagAnnotation": "@sandbox-smart-contracts/giveaway release v${version}",
+            "tagName": "@sandbox-smart-contracts/giveaway@v${version}"
+        },
+        "plugins": {
+            "@release-it/keep-a-changelog": {}
+        },
+        "before:init": [
+            "yarn lint",
+            "yarn test"
+        ]
+    },
     "devDependencies": {
         "@dlsl/hardhat-markup": "^1.0.0-rc.11",
         "@ethersproject/abi": "^5.7.0",
@@ -42,6 +57,7 @@
         "@nomiclabs/hardhat-ethers": "^2.2.3",
         "@nomiclabs/hardhat-etherscan": "^3.1.7",
         "@openzeppelin/contracts-upgradeable": "^4.9.0",
+        "@release-it/keep-a-changelog": "^4.0.0",
         "@typechain/ethers-v5": "^10.1.0",
         "@typechain/hardhat": "^6.1.2",
         "@types/chai": "^4.3.5",
@@ -61,6 +77,7 @@
         "hardhat-gas-reporter": "^1.0.9",
         "prettier": "^2.8.8",
         "prettier-plugin-solidity": "^1.1.3",
+        "release-it": "^16.1.5",
         "solhint": "^3.4.1",
         "solhint-plugin-prettier": "^0.0.5",
         "solidity-coverage": "^0.8.2",
