--- a/packages/giveaway/package.json
+++ b/packages/giveaway/package.json
@@ -9,6 +9,12 @@
         "README.md",
         "CHANGELOG.md"
     ],
+    "keywords": [
+        "ethereum",
+        "polygon",
+        "smart-contracts",
+        "The Sandbox"
+    ],
     "publishConfig": {
         "access": "public"
     },
