feat: use latest giveaway source package

--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -15,7 +15,7 @@
     "homepage": "https://github.com/thesandboxgame/sandbox-smart-contracts#readme",
     "private": true,
     "dependencies": {
-        "@sandbox-smart-contracts/giveaway": "*"
+        "@sandbox-smart-contracts/giveaway": "0.0.3"
     },
     "files": [
         "deployments"
