--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -24,8 +24,13 @@
         "@sandbox-smart-contracts/marketplace": "*"
     },
     "files": [
-        "deployments"
+        "deployments",
+        "README.md",
+        "CHANGELOG.md"
     ],
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "compile": "hardhat compile",
         "test": "cross-env NODE_OPTIONS=\"--max-old-space-size=8192 node --unhandled-rejections=strict\" HARDHAT_COMPILE=true hardhat test",
@@ -39,7 +44,8 @@
         "verify": "yarn hardhat etherscan-verify --network",
         "live:deploy": "node ./utils/npmScriptHelper.js deploy",
         "fork:deploy": "node ./utils/npmScriptHelper.js fork:deploy",
-        "fork:test": "node ./utils/npmScriptHelper.js fork:test"
+        "fork:test": "node ./utils/npmScriptHelper.js fork:test",
+        "release": "release-it"
     },
     "devDependencies": {
         "@ethersproject/abi": "^5.7.0",
@@ -47,6 +53,7 @@
         "@nomicfoundation/hardhat-chai-matchers": "1",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
         "@nomiclabs/hardhat-ethers": "^2.2.3",
+        "@release-it/keep-a-changelog": "^4.0.0",
         "@typechain/ethers-v5": "^11.0.0",
         "@typechain/hardhat": "^8.0.0",
         "@types/chai": "^4.3.5",
@@ -72,6 +79,7 @@
         "hardhat-deploy": "^0.11.43",
         "prettier": "^2.8.8",
         "prettier-plugin-solidity": "^1.1.3",
+        "release-it": "^16.1.5",
         "ts-node": "^10.9.1",
         "typechain": "^8.2.0",
         "typescript": "5.0.4"
@@ -82,5 +90,21 @@
         "_": [
             "test/**/*.ts"
         ]
+    },
+    "release-it": {
+        "git": {
+            "commitMessage": "chore: @sandbox-smart-contracts/deploy release v${version}",
+            "tagAnnotation": "@sandbox-smart-contracts/deploy release v${version}",
+            "tagName": "@sandbox-smart-contracts/deploy@v${version}"
+        },
+        "plugins": {
+            "@release-it/keep-a-changelog": {}
+        },
+        "hooks": {
+            "before:init": [
+                "yarn lint",
+                "yarn test"
+            ]
+        }
     }
 }
