feat: add second workspace

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "workspaces": {
         "packages": [
             "packages/*"
+        ],
+        "marketplace": [
+            "marketplace/*"
         ]
     },
     "private": true,
