--- a/packages/marketplace/package.json
+++ b/packages/marketplace/package.json
@@ -6,6 +6,9 @@
     "@sandbox-smart-contracts/dependency-metatx": "^0.0.2"
   },
   "devDependencies": {
+    "@daonomic/tests-common": "^0.2.2",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "4.9.3",
     "@openzeppelin/contracts-upgradeable": "4.9.3",
     "@types/chai": "^4.2.11",
@@ -13,10 +16,11 @@
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.10.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "web3": "^1.10.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test"
   },
   "author": "",
   "license": "ISC"
