--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -15,7 +15,8 @@
     "homepage": "https://github.com/thesandboxgame/sandbox-smart-contracts#readme",
     "private": true,
     "dependencies": {
-        "@sandbox-smart-contracts/giveaway": "*"
+        "@sandbox-smart-contracts/giveaway": "*",
+        "@sandbox-smart-contracts/marketplace": "*"
     },
     "files": [
         "deployments"
@@ -61,6 +62,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "ethers": "5",
         "hardhat": "~2.15.0",
+        "hardhat-contract-sizer": "^2.10.0",
         "hardhat-deploy": "^0.11.30",
         "prettier": "^2.8.8",
         "ts-node": "^10.9.1",
