--- a/packages/marketplace/package.json
+++ b/packages/marketplace/package.json
@@ -23,6 +23,7 @@
     "@sandbox-smart-contracts/dependency-metatx": "0.0.3",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
+    "@types/chai": "^4.3.6",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
