--- a/packages/giveaway/package.json
+++ b/packages/giveaway/package.json
@@ -55,44 +55,40 @@
         }
     },
     "dependencies": {
-        "@openzeppelin/contracts-upgradeable": "^4.9.0"
+        "@openzeppelin/contracts-upgradeable": "^4.9.3"
     },
     "devDependencies": {
-        "@dlsl/hardhat-markup": "^1.0.0-rc.11",
-        "@ethersproject/abi": "^5.7.0",
-        "@ethersproject/providers": "^5.7.2",
-        "@nomicfoundation/hardhat-chai-matchers": "1",
-        "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-        "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-        "@nomiclabs/hardhat-ethers": "^2.2.3",
-        "@nomiclabs/hardhat-etherscan": "^3.1.7",
-        "@openzeppelin/contracts-upgradeable": "^4.9.0",
+        "@dlsl/hardhat-markup": "^1.0.0-rc.14",
+        "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+        "@nomicfoundation/hardhat-ethers": "^3.0.4",
+        "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
+        "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+        "@nomicfoundation/hardhat-verify": "^1.1.1",
         "@release-it/keep-a-changelog": "^4.0.0",
-        "@typechain/ethers-v5": "^10.1.0",
-        "@typechain/hardhat": "^6.1.2",
-        "@types/chai": "^4.3.5",
+        "@typechain/ethers-v6": "^0.5.0",
+        "@typechain/hardhat": "^9.0.0",
+        "@types/chai": "^4.3.6",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^20.2.5",
-        "@typescript-eslint/eslint-plugin": "^5.59.8",
-        "@typescript-eslint/parser": "^5.59.8",
-        "chai": "^4.3.7",
-        "dotenv": "^16.1.3",
-        "eslint": "^8.41.0",
-        "eslint-config-prettier": "^8.8.0",
+        "@types/node": "^20.6.3",
+        "@typescript-eslint/eslint-plugin": "^6.7.2",
+        "@typescript-eslint/parser": "^6.7.2",
+        "chai": "^4.3.8",
+        "dotenv": "^16.3.1",
+        "eslint": "^8.49.0",
+        "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-mocha": "^10.1.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "eth-sig-util": "^3.0.1",
-        "ethers": "^5.0.0",
-        "hardhat": "^2.14.1",
+        "ethers": "^6.7.1",
+        "hardhat": "^2.17.3",
         "hardhat-gas-reporter": "^1.0.9",
         "prettier": "^2.8.8",
         "prettier-plugin-solidity": "^1.1.3",
         "release-it": "^16.1.5",
-        "solhint": "^3.4.1",
+        "solhint": "^3.6.2",
         "solhint-plugin-prettier": "^0.0.5",
-        "solidity-coverage": "^0.8.2",
+        "solidity-coverage": "^0.8.4",
         "ts-node": "^10.9.1",
-        "typechain": "^8.2.0",
-        "typescript": "5.0.4"
+        "typechain": "^8.3.1",
+        "typescript": "^5.2.2"
     }
 }
