--- a/packages/marketplace/tsconfig.json
+++ b/packages/marketplace/tsconfig.json
@@ -6,7 +6,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
   },
   "include": [
     "hardhat.config.ts",
