--- a/packages/marketplace/package.json
+++ b/packages/marketplace/package.json
@@ -10,17 +10,12 @@
     ]
   },
   "devDependencies": {
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-ethers": "^3.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/contracts": "^4.9.2",
-    "@openzeppelin/contracts-upgradeable": "^4.9.2",
-    "@sandbox-smart-contracts/dependency-metatx": "0.0.3",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.3.6",
@@ -36,6 +31,7 @@
     "ethers": "^6.6.2",
     "hardhat": "^2.14.1",
     "hardhat-gas-reporter": "^1.0.9",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
@@ -43,8 +39,7 @@
     "solidity-coverage": "^0.8.3",
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
-    "typescript": "5.0.4",
-    "web3": "^4.1.2"
+    "typescript": "5.0.4"
   },
   "scripts": {
     "lint": "eslint --max-warnings 0 \"**/*.{js,ts}\" && solhint --max-warnings 0 \"contracts/**/*.sol\"",
@@ -59,6 +54,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/hardhat-upgrades": "^2.2.1"
+    "@openzeppelin/contracts": "^4.9.2",
+    "@openzeppelin/contracts-upgradeable": "^4.9.2",
+    "@openzeppelin/hardhat-upgrades": "^2.2.1",
+    "@sandbox-smart-contracts/dependency-metatx": "0.0.3"
   }
 }
