--- a/packages/example-hardhat/package.json
+++ b/packages/example-hardhat/package.json
@@ -34,6 +34,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
+    "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
