--- a/packages/giveaway/package.json
+++ b/packages/giveaway/package.json
@@ -54,6 +54,9 @@
             ]
         }
     },
+    "dependencies": {
+        "@openzeppelin/contracts-upgradeable": "^4.9.0"
+    },
     "devDependencies": {
         "@dlsl/hardhat-markup": "^1.0.0-rc.11",
         "@ethersproject/abi": "^5.7.0",
