--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,15 +16,20 @@
     "websocket": "1.0.32"
   },
   "devDependencies": {
-    "@codechecks/client": "^0.1.10",
     "@ethereumjs/block": "^3.5.1",
     "@ethereumjs/common": "^2.5.0",
     "@ethereumjs/tx": "^3.3.2",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/hardware-wallets": "^5.7.0",
+    "@ethersproject/hash": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
+    "@ethersproject/transactions": "^5.7.0",
     "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "^5.0.5",
     "@maticnetwork/fx-portal": "^1.0.5",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.7",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^3.2.1-solc-0.7",
     "@openzeppelin/contracts-0.6": "npm:@openzeppelin/contracts@3.2.0",
@@ -32,6 +37,7 @@
     "@openzeppelin/contracts-0.8.13": "npm:@openzeppelin/contracts@4.8.0",
     "@openzeppelin/contracts-upgradeable": "4.4.2",
     "@openzeppelin/contracts-upgradeable-0.8.13": "npm:@openzeppelin/contracts-upgradeable@4.8.0",
+    "@openzeppelin/defender-relay-client": "^1.48.0",
     "@types/chai": "^4.2.11",
     "@types/fs-extra": "^9.0.6",
     "@types/inquirer": "^7.3.1",
@@ -45,7 +51,6 @@
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "csv-parser": "^3.0.0",
-    "defender-relay-client": "^1.44.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.7.0",
@@ -76,7 +81,9 @@
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "0.8.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "web3-core": "^1.8.2",
+    "web3-core-helpers": "^1.8.2"
   },
   "scripts": {
     "postinstall": "node ./.setup.js",
