--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,7 +29,7 @@
     "@ethersproject/wallet": "^5.0.5",
     "@maticnetwork/fx-portal": "^1.0.5",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.7",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^3.2.1-solc-0.7",
     "@openzeppelin/contracts-0.6": "npm:@openzeppelin/contracts@3.2.0",
