--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "lint": "nx run-many --target=lint",
         "format": "nx run-many --target=format",
         "deploy": "nx run-many --target=deploy",
-        "all": "nx run-many --all --parallel --targets=lint,format,test,deploy && nx run-many --all --targets=coverage",
+        "analyze": "nx run-many --target=analyze",
+        "all": "nx run-many --all --parallel --targets=lint,format,analyze,test,deploy && nx run-many --all --targets=coverage",
         "test:ci": "nx affected --target=test --parallel=1",
         "coverage:ci": "nx affected --target=coverage --parallel=1 && istanbul-combine -r lcov -r html 'packages/*/coverage.json'",
         "lint:ci": "nx affected --target=lint",
         "format:ci": "nx affected --target=format",
         "deploy:ci": "nx affected --target=deploy --parallel=1",
+        "analyze:ci": "nx affected --target=analyze",
         "clean": "rimraf coverage/* && nx run-many --target=clean"
     },
     "repository": "https://github.com/thesandboxgame/sandbox-smart-contracts",
