--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install slither
+      - name: Install Slither
         run: pip3 install slither-analyzer
 
       - name: Running Slither
