refactor: removed duplicate interfaces

--- a/packages/marketplace/package.json
+++ b/packages/marketplace/package.json
@@ -58,6 +58,7 @@
     "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
     "@openzeppelin/hardhat-upgrades": "^2.2.1",
-    "@sandbox-smart-contracts/dependency-metatx": "0.0.3"
+    "@sandbox-smart-contracts/dependency-metatx": "0.0.3",
+    "@sandbox-smart-contracts/dependency-royalty-management": "*"
   }
 }
