fix: added dependencies

--- a/packages/marketplace/package.json
+++ b/packages/marketplace/package.json
@@ -55,6 +55,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@manifoldxyz/royalty-registry-solidity": "^3.0.0",
     "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
     "@openzeppelin/hardhat-upgrades": "^2.2.1",
