--- a/packages/marketplace/package.json
+++ b/packages/marketplace/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^6.6.2",
     "hardhat": "^2.14.1",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
