--- a/packages/dependency-metatx/package.json
+++ b/packages/dependency-metatx/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "lint": "eslint --max-warnings 0 \"**/*.{js,ts}\" && solhint --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix \"contracts/**/*.sol\"",
-    "format": "prettier --check \"**/*.{ts,js,sol}\"",
-    "format:fix": "prettier --write \"**/*.{ts,js,sol}\"",
+    "format": "prettier --check \"**/*.{ts,js,sol.md}\"",
+    "format:fix": "prettier --write \"**/*.{ts,js,sol.md}\"",
     "test": "hardhat test",
     "coverage": "hardhat coverage --testfiles 'test/*.ts''test/*.js'",
     "hardhat": "hardhat",
