reworking deployment files for marketplace

--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -19,7 +19,8 @@
         "@sandbox-smart-contracts/dependency-operator-filter": "*",
         "@sandbox-smart-contracts/dependency-royalty-management": "*",
         "@sandbox-smart-contracts/giveaway": "0.0.3",
-        "@sandbox-smart-contracts/marketplace": "*"
+        "@sandbox-smart-contracts/marketplace": "*",
+        "@sandbox-smart-contracts/core": "*"
     },
     "files": [
         "deployments"
