Move packages from dev deps to deps

--- a/packages/dependency-metatx/package.json
+++ b/packages/dependency-metatx/package.json
@@ -49,6 +49,9 @@
       ]
     }
   },
+  "dependencies": {
+    "@openzeppelin/contracts-upgradeable": "^4.9.0"
+  },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
@@ -57,7 +60,6 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/contracts-upgradeable": "^4.9.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.3.5",
