--- a/packages/dependency-royalty-management/package.json
+++ b/packages/dependency-royalty-management/package.json
@@ -39,18 +39,20 @@
       ]
     }
   },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.9.0",
+    "@openzeppelin/contracts-upgradeable": "^4.9.0",
+    "@manifoldxyz/libraries-solidity": "^1.0.4",
+    "@manifoldxyz/royalty-registry-solidity": "^2.0.3"
+  },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
-    "@manifoldxyz/libraries-solidity": "^1.0.4",
-    "@manifoldxyz/royalty-registry-solidity": "^2.0.3",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/contracts": "^4.9.0",
-    "@openzeppelin/contracts-upgradeable": "^4.9.0",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@sandbox-smart-contracts/dependency-metatx": "*",
     "@typechain/ethers-v5": "^10.2.1",
